--- a/src/Views/RepositoryConfigure.axaml
+++ b/src/Views/RepositoryConfigure.axaml
@@ -340,6 +340,39 @@
           </ContentControl>
         </Grid>
       </TabItem>
+
+      <TabItem>
+        <TabItem.Header>
+          <TextBlock Classes="tab_header" Text="{DynamicResource Text.Configure.OpenAI}"/>
+        </TabItem.Header>
+
+        <Grid Margin="16,4,16,8" RowDefinitions="32,Auto" ColumnDefinitions="Auto,*">
+          <TextBlock Grid.Row="0" Grid.Column="0"
+                     HorizontalAlignment="Right" VerticalAlignment="Center"
+                     Margin="0,0,8,0"
+                     Text="{DynamicResource Text.Configure.OpenAI.Prefered}"/>
+          <ComboBox Grid.Row="0" Grid.Column="1"
+                    Height="28" Padding="8,0"
+                    VerticalAlignment="Center" HorizontalAlignment="Stretch"
+                    ItemsSource="{Binding AvailableOpenAIServices}"
+                    SelectedItem="{Binding PreferedOpenAIService, Mode=TwoWay}">
+            <ComboBox.ItemTemplate>
+              <DataTemplate>
+                <StackPanel Orientation="Horizontal" Height="20" VerticalAlignment="Center">
+                  <Path Width="12" Height="12" Data="{StaticResource Icons.AIAssist}" Fill="{DynamicResource Brush.FG1}"/>
+                  <TextBlock Margin="6,0,0,0" Text="{Binding}"/>
+                </StackPanel>
+              </DataTemplate>
+            </ComboBox.ItemTemplate>
+          </ComboBox>
+
+          <TextBlock Grid.Row="1" Grid.Column="1"
+                     Margin="0,6,0,0"
+                     Text="{DynamicResource Text.Configure.OpenAI.Prefered.Tip}"
+                     TextWrapping="Wrap"
+                     Foreground="{DynamicResource Brush.FG2}"/>
+        </Grid>
+      </TabItem>
     </TabControl>
   </Grid>
 </v:ChromelessWindow>
