--- a/src/Views/StashesPage.axaml
+++ b/src/Views/StashesPage.axaml
@@ -13,7 +13,7 @@
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="{Binding Source={x:Static vm:Preference.Instance}, Path=Layout.StashesLeftWidth, Mode=TwoWay}" MinWidth="300"/>
       <ColumnDefinition Width="4"/>
-      <ColumnDefinition Width="*"/>
+      <ColumnDefinition Width="*" MinWidth="300"/>
     </Grid.ColumnDefinitions>
 
     <!-- Left -->
