localization: added es_ES.axaml
localization: added es_ES.axaml

--- a/src/App.axaml
+++ b/src/App.axaml
@@ -18,6 +18,7 @@
       <ResourceInclude x:Key="ru_RU" Source="/Resources/Locales/ru_RU.axaml"/>
       <ResourceInclude x:Key="zh_CN" Source="/Resources/Locales/zh_CN.axaml"/>
       <ResourceInclude x:Key="zh_TW" Source="/Resources/Locales/zh_TW.axaml"/>
+      <ResourceInclude x:Key="es_ES" Source="/Resources/Locales/es_ES.axaml"/>
     </ResourceDictionary>
   </Application.Resources>
 
