ux: remove button padding and use content alignment to center text
Signed-off-by: leo <longshuang@msn.cn>

--- a/src/Views/LauncherPage.axaml
+++ b/src/Views/LauncherPage.axaml
@@ -60,13 +60,19 @@
                             HorizontalAlignment="Right"
                             IsVisible="{Binding InProgress, Converter={x:Static BoolConverters.Not}}">
                   <Button Classes="flat primary"
-                          Width="80"
+                          Width="80" Height="28"
+                          Padding="0"
+                          HorizontalContentAlignment="Center"
+                          VerticalContentAlignment="Center"
                           Content="{DynamicResource Text.Sure}"
                           Click="OnPopupSure"
                           HotKey="Enter"/>
                   <Button Classes="flat"
-                          Width="80"
+                          Width="80" Height="28"
                           Margin="8,0,0,0"
+                          Padding="0"
+                          HorizontalContentAlignment="Center"
+                          VerticalContentAlignment="Center"
                           Content="{DynamicResource Text.Cancel}"
                           Click="OnPopupCancel"/>
                 </StackPanel>
