--- a/src/Views/AIAssistant.axaml
+++ b/src/Views/AIAssistant.axaml
@@ -15,30 +15,23 @@
                     WindowStartupLocation="CenterOwner">
   <Grid RowDefinitions="Auto,Auto,Auto">
     <!-- TitleBar -->
-    <Grid Grid.Row="0" ColumnDefinitions="Auto,*,Auto" Height="30" IsVisible="{Binding !#ThisControl.UseSystemWindowFrame}">
-      <Border Grid.Column="0" Grid.ColumnSpan="3"
-              Background="{DynamicResource Brush.TitleBar}"
+    <Grid Grid.Row="0" Height="28" IsVisible="{Binding !#ThisControl.UseSystemWindowFrame}">
+      <Border Background="{DynamicResource Brush.TitleBar}"
               BorderThickness="0,0,0,1" BorderBrush="{DynamicResource Brush.Border0}"
               PointerPressed="BeginMoveWindow"/>
 
-      <Path Grid.Column="0"
-            Width="14" Height="14"
+      <Path Width="14" Height="14"
             Margin="10,0,0,0"
+            HorizontalAlignment="Left"
             Data="{StaticResource Icons.AIAssist}"
             IsVisible="{OnPlatform True, macOS=False}"/>
 
-      <v:CaptionButtonsMacOS Grid.Column="0"
-                             Margin="0,2,0,0"
-                             IsCloseButtonOnly="True"
-                             IsVisible="{OnPlatform False, macOS=True}"/>
-
-      <TextBlock Grid.Column="0" Grid.ColumnSpan="3"
-                 Classes="bold"
+      <TextBlock Classes="bold"
                  Text="{DynamicResource Text.AIAssistant}"
                  HorizontalAlignment="Center" VerticalAlignment="Center"
                  IsHitTestVisible="False"/>
 
-      <v:CaptionButtons Grid.Column="2"
+      <v:CaptionButtons HorizontalAlignment="Right"
                         IsCloseButtonOnly="True"
                         IsVisible="{OnPlatform True, macOS=False}"/>
     </Grid>
