--- a/src/Views/ConfigureWorkspace.axaml
+++ b/src/Views/ConfigureWorkspace.axaml
@@ -2,10 +2,8 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                    xmlns:m="using:SourceGit.Models"
                     xmlns:vm="using:SourceGit.ViewModels"
                     xmlns:v="using:SourceGit.Views"
-                    xmlns:c="using:SourceGit.Converters"
                     mc:Ignorable="d" d:DesignWidth="500" d:DesignHeight="450"
                     x:Class="SourceGit.Views.ConfigureWorkspace"
                     x:DataType="vm:ConfigureWorkspace"
@@ -17,30 +15,23 @@
                     WindowStartupLocation="CenterOwner">
   <Grid RowDefinitions="Auto,Auto" MinWidth="494">
     <!-- TitleBar -->
-    <Grid Grid.Row="0" ColumnDefinitions="Auto,*,Auto" Height="30" IsVisible="{Binding !#ThisControl.UseSystemWindowFrame}">
-      <Border Grid.Column="0" Grid.ColumnSpan="3"
-              Background="{DynamicResource Brush.TitleBar}"
+    <Grid Grid.Row="0" Height="28" IsVisible="{Binding !#ThisControl.UseSystemWindowFrame}">
+      <Border Background="{DynamicResource Brush.TitleBar}"
               BorderThickness="0,0,0,1" BorderBrush="{DynamicResource Brush.Border0}"
               PointerPressed="BeginMoveWindow"/>
 
-      <Path Grid.Column="0"
-            Width="14" Height="14"
-            Data="{StaticResource Icons.Workspace}"
+      <Path Width="14" Height="14"
             Margin="10,0,0,0"
+            HorizontalAlignment="Left"
+            Data="{StaticResource Icons.Workspace}"
             IsVisible="{OnPlatform True, macOS=False}"/>
 
-      <v:CaptionButtonsMacOS Grid.Column="0"
-                             Margin="0,2,0,0"
-                             IsCloseButtonOnly="True"
-                             IsVisible="{OnPlatform False, macOS=True}"/>
-
-      <TextBlock Grid.Column="0" Grid.ColumnSpan="3"
-                 Classes="bold"
+      <TextBlock Classes="bold"
                  Text="{DynamicResource Text.ConfigureWorkspace}"
                  HorizontalAlignment="Center" VerticalAlignment="Center"
                  IsHitTestVisible="False"/>
 
-      <v:CaptionButtons Grid.Column="2"
+      <v:CaptionButtons HorizontalAlignment="Right"
                         IsCloseButtonOnly="True"
                         IsVisible="{OnPlatform True, macOS=False}"/>
     </Grid>
