--- a/src/Views/Launcher.axaml
+++ b/src/Views/Launcher.axaml
@@ -25,13 +25,11 @@
       <Border Grid.Column="0" Grid.ColumnSpan="4"
               Background="{DynamicResource Brush.TitleBar}"
               BorderThickness="0,0,0,1" BorderBrush="{DynamicResource Brush.Border0}"
-              DoubleTapped="OnTitleBarDoubleTapped"
+              DoubleTapped="MaximizeOrRestoreWindow"
               PointerPressed="BeginMoveWindow"/>
 
       <!-- Caption Buttons (macOS) -->
-      <Border Grid.Column="0" VerticalAlignment="Stretch" Margin="2,0,8,3" IsVisible="{OnPlatform False, macOS=True}">
-        <v:CaptionButtonsMacOS VerticalAlignment="Bottom"/>
-      </Border>
+      <Border Grid.Column="0" Width="72" IsVisible="{Binding #ThisControl.HasLeftCaptionButton}"/>
 
       <!-- Menu (Windows/Linux) -->
       <Button Grid.Column="0" Classes="icon_button" VerticalAlignment="Bottom" Margin="6,0,2,3" IsVisible="{OnPlatform True, macOS=False}">
