--- a/src/Views/RepositoryConfigure.axaml
+++ b/src/Views/RepositoryConfigure.axaml
@@ -5,6 +5,7 @@
                     xmlns:m="using:SourceGit.Models"
                     xmlns:vm="using:SourceGit.ViewModels"
                     xmlns:v="using:SourceGit.Views"
+                    xmlns:ac="using:Avalonia.Controls.Converters"
                     mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
                     x:Class="SourceGit.Views.RepositoryConfigure"
                     x:DataType="vm:RepositoryConfigure"
@@ -338,6 +339,116 @@
         </Grid>
       </TabItem>
 
+      <TabItem>
+        <TabItem.Header>
+          <TextBlock Classes="tab_header" Text="{DynamicResource Text.Configure.CustomAction}"/>
+        </TabItem.Header>
+
+        <Grid ColumnDefinitions="200,*" Height="250" Margin="0,8,0,16">
+          <Border Grid.Column="0"
+                  BorderThickness="1" BorderBrush="{DynamicResource Brush.Border2}"
+                  Background="{DynamicResource Brush.Contents}">
+            <Grid RowDefinitions="*,1,Auto">
+              <ListBox Grid.Row="0"
+                       Background="Transparent"
+                       ItemsSource="{Binding CustomActions}"
+                       SelectedItem="{Binding SelectedCustomAction, Mode=TwoWay}"
+                       SelectionMode="Single">
+                <ListBox.Styles>
+                  <Style Selector="ListBoxItem">
+                    <Setter Property="MinHeight" Value="0"/>
+                    <Setter Property="Height" Value="26"/>
+                    <Setter Property="Padding" Value="4,2"/>
+                  </Style>
+                </ListBox.Styles>
+
+                <ListBox.ItemsPanel>
+                  <ItemsPanelTemplate>
+                    <StackPanel Orientation="Vertical"/>
+                  </ItemsPanelTemplate>
+                </ListBox.ItemsPanel>
+
+                <ListBox.ItemTemplate>
+                  <DataTemplate DataType="m:CustomAction">
+                    <Grid Margin="4,0" ColumnDefinitions="Auto,*">
+                      <Path Grid.Column="0" Width="12" Height="12" Data="{StaticResource Icons.Action}" Fill="{DynamicResource Brush.FG1}"/>
+                      <TextBlock Grid.Column="1" Text="{Binding Name}" Margin="6,0,0,0" TextTrimming="CharacterEllipsis"/>
+                    </Grid>
+                  </DataTemplate>
+                </ListBox.ItemTemplate>
+              </ListBox>
+
+              <Rectangle Grid.Row="1" Height="1" Fill="{DynamicResource Brush.Border2}" HorizontalAlignment="Stretch" VerticalAlignment="Bottom"/>
+
+              <StackPanel Grid.Row="2" Orientation="Horizontal" Background="{DynamicResource Brush.ToolBar}">
+                <Button Classes="icon_button" Command="{Binding AddNewCustomAction}">
+                  <Path Width="14" Height="14" Data="{StaticResource Icons.Plus}"/>
+                </Button>
+
+                <Rectangle Width="1" Fill="{DynamicResource Brush.Border2}" HorizontalAlignment="Left" VerticalAlignment="Stretch"/>
+
+                <Button Classes="icon_button" Command="{Binding RemoveSelectedCustomAction}">
+                  <Path Width="14" Height="14" Data="{StaticResource Icons.Window.Minimize}"/>
+                </Button>
+
+                <Rectangle Width="1" Fill="{DynamicResource Brush.Border2}" HorizontalAlignment="Left" VerticalAlignment="Stretch"/>
+              </StackPanel>
+            </Grid>
+          </Border>
+
+          <ContentControl Grid.Column="1" Margin="16,0,0,0">
+            <ContentControl.Content>
+              <Binding Path="SelectedCustomAction">
+                <Binding.TargetNullValue>
+                  <Path Width="64" Height="64"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        Fill="{DynamicResource Brush.FG2}"
+                        Data="{StaticResource Icons.Empty}"/>
+                </Binding.TargetNullValue>
+              </Binding>
+            </ContentControl.Content>
+
+            <ContentControl.DataTemplates>
+              <DataTemplate DataType="m:CustomAction">
+                <StackPanel Orientation="Vertical">
+                  <TextBlock Text="{DynamicResource Text.Configure.CustomAction.Name}"/>
+                  <TextBox Margin="0,4,0,0" CornerRadius="3" Height="28" Text="{Binding Name, Mode=TwoWay}"/>
+
+                  <StackPanel Orientation="Horizontal" Margin="0,12,0,0">
+                    <StackPanel.Resources>
+                      <ac:EnumToBoolConverter x:Key="EnumToBoolConverter"/>
+                    </StackPanel.Resources>
+                    
+                    <TextBlock Text="{DynamicResource Text.Configure.CustomAction.Scope}"/>
+                    <RadioButton Content="{DynamicResource Text.Configure.CustomAction.Scope.Repository}"
+                                 GroupName="CustomActionScope"
+                                 Margin="8,0"
+                                 IsChecked="{Binding Scope, Mode=TwoWay, Converter={StaticResource EnumToBoolConverter}, ConverterParameter={x:Static m:CustomActionScope.Repository}}"/>
+                    <RadioButton Content="{DynamicResource Text.Configure.CustomAction.Scope.Commit}"
+                                 GroupName="CustomActionScope"
+                                 IsChecked="{Binding Scope, Mode=TwoWay, Converter={StaticResource EnumToBoolConverter}, ConverterParameter={x:Static m:CustomActionScope.Commit}}"/>
+                  </StackPanel>
+
+                  <TextBlock Margin="0,12,0,0" Text="{DynamicResource Text.Configure.CustomAction.Executable}"/>
+                  <TextBox Margin="0,4,0,0" Height="28" CornerRadius="3" Text="{Binding Executable, Mode=TwoWay}">
+                    <TextBox.InnerRightContent>
+                      <Button Classes="icon_button" Width="30" Height="30" Click="SelectExecutableForCustomAction">
+                        <Path Data="{StaticResource Icons.Folder.Open}" Fill="{DynamicResource Brush.FG1}"/>
+                      </Button>
+                    </TextBox.InnerRightContent>
+                  </TextBox>
+
+                  <TextBlock Margin="0,12,0,0" Text="{DynamicResource Text.Configure.CustomAction.Arguments}"/>
+                  <TextBox Margin="0,4,0,0" CornerRadius="3" Height="28" Text="{Binding Arguments, Mode=TwoWay}"/>
+                  <TextBlock Margin="0,2,0,0" TextWrapping="Wrap" Text="{DynamicResource Text.Configure.CustomAction.Arguments.Tip}" Foreground="{DynamicResource Brush.FG2}"/>
+                </StackPanel>
+              </DataTemplate>
+            </ContentControl.DataTemplates>
+          </ContentControl>
+        </Grid>
+      </TabItem>
+      
       <TabItem>
         <TabItem.Header>
           <TextBlock Classes="tab_header" Text="{DynamicResource Text.Configure.OpenAI}"/>
