--- a/src/Views/DiffView.axaml
+++ b/src/Views/DiffView.axaml
@@ -34,11 +34,24 @@
 
           <!-- Toolbar Buttons -->
           <StackPanel Grid.Column="3" Margin="8,0,0,0" Orientation="Horizontal" VerticalAlignment="Center">
+            <ToggleButton Classes="line_path"
+                          Width="32" Height="18"
+                          Background="Transparent"
+                          Padding="9,6"
+                          Command="{Binding ToggleFullTextDiff}"
+                          IsChecked="{Binding Source={x:Static vm:Preference.Instance}, Path=UseFullTextDiff, Mode=OneWay}"
+                          IsVisible="{Binding IsTextDiff}"
+                          ToolTip.Tip="{DynamicResource Text.Diff.VisualLines.All}">
+              <Path Width="13" Height="13" Data="{StaticResource Icons.Lines.All}" Margin="0,3,0,0"/>
+            </ToggleButton>
             <Button Classes="icon_button" 
                     Width="32" 
                     Command="{Binding IncrUnified}" 
                     IsVisible="{Binding IsTextDiff}"
                     ToolTip.Tip="{DynamicResource Text.Diff.VisualLines.Incr}">
+              <Button.IsEnabled>
+                <Binding Source="{x:Static vm:Preference.Instance}" Path="UseFullTextDiff" Mode="OneWay" Converter="{x:Static BoolConverters.Not}"/>
+              </Button.IsEnabled>
               <Path Width="12" Height="12" Stretch="Uniform" Margin="0,6,0,0" Data="{StaticResource Icons.Lines.Incr}"/>
             </Button>
 
@@ -46,8 +59,13 @@
                     Width="32" 
                     Command="{Binding DecrUnified}" 
                     IsVisible="{Binding IsTextDiff}" 
-                    ToolTip.Tip="{DynamicResource Text.Diff.VisualLines.Decr}" 
-                    IsEnabled="{Binding UnifiedLines, Converter={x:Static c:IntConverters.IsGreaterThanFour}}">
+                    ToolTip.Tip="{DynamicResource Text.Diff.VisualLines.Decr}">
+              <Button.IsEnabled>
+                <MultiBinding Converter="{x:Static BoolConverters.And}">
+                  <Binding Path="UnifiedLines" Mode="OneWay" Converter="{x:Static c:IntConverters.IsGreaterThanFour}"/>
+                  <Binding Source="{x:Static vm:Preference.Instance}" Path="UseFullTextDiff" Mode="OneWay" Converter="{x:Static BoolConverters.Not}"/>
+                </MultiBinding>
+              </Button.IsEnabled>
               <Path Width="12" Height="12" Stretch="Uniform" Margin="0,6,0,0" Data="{StaticResource Icons.Lines.Decr}"/>
             </Button>
 
@@ -211,7 +229,9 @@
 
           <!-- Text Diff -->
           <DataTemplate DataType="m:TextDiff">
-            <v:TextDiffView UseSideBySideDiff="{Binding Source={x:Static vm:Preference.Instance}, Path=UseSideBySideDiff, Mode=OneWay}"/>
+            <v:TextDiffView 
+              UseSideBySideDiff="{Binding Source={x:Static vm:Preference.Instance}, Path=UseSideBySideDiff, Mode=OneWay}"
+              UseFullTextDiff="{Binding Source={x:Static vm:Preference.Instance}, Path=UseFullTextDiff, Mode=OneWay}"/>
           </DataTemplate>
 
           <!-- Empty or only EOL changes -->
